SERVER-126397 Preserve path suffix on let variable when extracting join predicates (#54714)

GitOrigin-RevId: a78c598449faeddb78b9566cf7eab177eb416393